@@ -43,6 +43,8 @@ package org.netbeans.modules.java.j2seplatform.libraries;
 
 import java.awt.Color;
 import java.awt.Component;
+import java.awt.event.ActionEvent;
+import java.awt.event.KeyEvent;
 import java.beans.Customizer;
 import java.io.File;
 import java.io.IOException;
@@ -53,18 +55,20 @@ import java.net.URISyntaxException;
 import java.util.Collection;
 import java.util.Arrays;
 import java.util.Collections;
+import javax.swing.AbstractAction;
 import javax.swing.DefaultListCellRenderer;
 import javax.swing.JButton;
 import javax.swing.JComponent;
 import javax.swing.JFileChooser;
 import javax.swing.JList;
+import javax.swing.KeyStroke;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
 import javax.swing.filechooser.FileFilter;
 import org.netbeans.api.project.ant.FileChooser;
+import org.netbeans.spi.java.project.support.JavadocAndSourceRootDetection;
 import org.netbeans.spi.project.libraries.LibraryCustomizerContext;
 import org.openide.DialogDisplayer;
-import org.openide.ErrorManager;
 import org.openide.NotifyDescriptor;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
@@ -79,7 +83,7 @@ import org.netbeans.spi.project.libraries.support.LibrariesSupport;
  * @author  tom
  */
 public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customizer {
-    
+
     private String volumeType;
     private LibraryImplementation impl;
     private LibraryStorageArea area;
@@ -168,6 +172,13 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
                 removeButton.setEnabled(indices.length > 0);
                 downButton.setEnabled(indices.length > 0 && indices[indices.length-1]<model.getSize()-1);
                 upButton.setEnabled(indices.length>0 && indices[0]>0);
+            }
+        });
+        //#143481
+        content.getInputMap().put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0), "delete");
+        content.getActionMap().put("delete", new AbstractAction() {
+            public void actionPerformed(ActionEvent e) {
+                removeResource(null);
             }
         });
     }
@@ -343,7 +354,7 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
             chooser.setMultiSelectionEnabled (true);
             chooser.setDialogTitle(NbBundle.getMessage(J2SEVolumeCustomizer.class,"TXT_OpenClasses"));
             chooser.setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
-            chooser.setFileFilter (new SimpleFileFilter(NbBundle.getMessage(
+            chooser.setFileFilter (new ArchiveFileFilter(NbBundle.getMessage(
                     J2SEVolumeCustomizer.class,"TXT_Classpath"),new String[] {"ZIP","JAR"}));   //NOI18N
             chooser.setApproveButtonText(NbBundle.getMessage(J2SEVolumeCustomizer.class,"CTL_SelectCP"));
             chooser.setApproveButtonMnemonic(NbBundle.getMessage(J2SEVolumeCustomizer.class,"MNE_SelectCP").charAt(0));
@@ -352,7 +363,7 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
             chooser.setMultiSelectionEnabled (true);
             chooser.setDialogTitle(NbBundle.getMessage(J2SEVolumeCustomizer.class,"TXT_OpenJavadoc"));
             chooser.setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
-            chooser.setFileFilter (new SimpleFileFilter(NbBundle.getMessage(
+            chooser.setFileFilter (new ArchiveFileFilter(NbBundle.getMessage(
                     J2SEVolumeCustomizer.class,"TXT_Javadoc"),new String[] {"ZIP","JAR"}));     //NOI18N
             chooser.setApproveButtonText(NbBundle.getMessage(J2SEVolumeCustomizer.class,"CTL_SelectJD"));
             chooser.setApproveButtonMnemonic(NbBundle.getMessage(J2SEVolumeCustomizer.class,"MNE_SelectJD").charAt(0));
@@ -361,7 +372,7 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
             chooser.setMultiSelectionEnabled (true);
             chooser.setDialogTitle(NbBundle.getMessage(J2SEVolumeCustomizer.class,"TXT_OpenSources"));
             chooser.setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
-            chooser.setFileFilter (new SimpleFileFilter(NbBundle.getMessage(
+            chooser.setFileFilter (new ArchiveFileFilter(NbBundle.getMessage(
                     J2SEVolumeCustomizer.class,"TXT_Sources"),new String[] {"ZIP","JAR"}));     //NOI18N
             chooser.setApproveButtonText(NbBundle.getMessage(J2SEVolumeCustomizer.class,"CTL_SelectSRC"));
             chooser.setApproveButtonMnemonic(NbBundle.getMessage(J2SEVolumeCustomizer.class,"MNE_SelectSRC").charAt(0));
@@ -374,11 +385,13 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
         if (chooser.showOpenDialog(this) == JFileChooser.APPROVE_OPTION) {
             try {
                 lastFolder = chooser.getCurrentDirectory();
-                addFiles (chooser.getSelectedPaths(), area != null ? area.getLocation() : null);
+                addFiles (chooser.getSelectedPaths(), area != null ? area.getLocation() : null, this.volumeType);
             } catch (MalformedURLException mue) {
-                ErrorManager.getDefault().notify(mue);
+                Exceptions.printStackTrace(mue);
+            } catch (URISyntaxException ue) {
+                Exceptions.printStackTrace(ue);
             } catch (IOException ex) {
-                ErrorManager.getDefault().notify(ex);
+                Exceptions.printStackTrace(ex);
             }
         }
     }//GEN-LAST:event_addResource
@@ -405,7 +418,7 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
 //    }
 
 
-    private void addFiles (String[] fileNames, URL libraryLocation) throws MalformedURLException {
+    private void addFiles (String[] fileNames, URL libraryLocation, String volume) throws MalformedURLException, URISyntaxException {
         int firstIndex = this.model.getSize();
         for (int i = 0; i < fileNames.length; i++) {
             File f = new File(fileNames[i]);
@@ -419,11 +432,16 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
                             new File(URI.create(area.getLocation().toExternalForm())).getParentFile(), f.getPath()));
                     }
                 }
+                String jarPath = checkFile(realFile, volume);
                 if (FileUtil.isArchiveFile(realFile.toURI().toURL())) {
                     uri = LibrariesSupport.getArchiveRoot(uri);
-                } else if (!uri.toString().endsWith("/")){
+                    if (jarPath != null) {
+                        assert uri.toString().endsWith("!/") : uri.toString(); //NOI18N
+                        uri = URI.create(uri.toString() + encodePath(jarPath));
+                    }
+                } else if (!uri.toString().endsWith("/")){ //NOI18N
                     try {
-                        uri = new URI(uri.toString()+"/");
+                        uri = new URI(uri.toString()+"/"); //NOI18N
                     } catch (URISyntaxException ex) {
                         throw new AssertionError(ex);
                     }
@@ -431,23 +449,21 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
                 model.addResource(uri);
             } else {
                 assert f.isAbsolute() : f.getPath();
-                URL url = FileUtil.normalizeFile(f).toURI().toURL();
-                if (FileUtil.isArchiveFile(url)) {
-                    url = FileUtil.getArchiveRoot(url);
-                } else if (!url.toExternalForm().endsWith("/")){
-                    url = new URL(url.toExternalForm()+"/");
+                String jarPath = checkFile(f, volume);
+                uri = FileUtil.normalizeFile(f).toURI();
+                if (FileUtil.isArchiveFile(uri.toURL())) {
+                    uri = LibrariesSupport.getArchiveRoot(uri);
+                    if (jarPath != null) {
+                        assert uri.toString().endsWith("!/") : uri.toString(); //NOI18N
+                        uri = URI.create(uri.toString() + encodePath(jarPath));
+                    }
+                } else if (!uri.toString().endsWith("/")){ //NOI18N
+                    uri = URI.create(uri.toString()+"/"); //NOI18N
                 }
-                model.addResource(url);
+                model.addResource(uri.toURL()); //Has to be added as URL, model asserts it
+
             }
-            if (this.volumeType.equals(J2SELibraryTypeProvider.VOLUME_TYPE_JAVADOC)
-                && !JavadocForBinaryQueryLibraryImpl.isValidLibraryJavadocRoot (
-                    LibrariesSupport.resolveLibraryEntryURI(libraryLocation, uri).toURL())) {
-                DialogDisplayer.getDefault().notify(new NotifyDescriptor.Message(
-                    NbBundle.getMessage(J2SEVolumeCustomizer.class,"TXT_InvalidJavadocRoot", f.getPath()),
-                    NotifyDescriptor.ERROR_MESSAGE));
-                continue;
-            }
-        }        
+        }
         int lastIndex = this.model.getSize()-1;
         if (firstIndex<=lastIndex) {
             int[] toSelect = new int[lastIndex-firstIndex+1];
@@ -462,7 +478,51 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
             }
         }
     }
-    
+
+    static String encodePath(String path) throws URISyntaxException {
+        return new URI(null, null, path, null).getRawPath();
+    }
+
+    private String checkFile(File f, String volume) {
+        FileObject fo = FileUtil.toFileObject(f);
+        if (volume.equals(J2SELibraryTypeProvider.VOLUME_TYPE_JAVADOC)) {
+            if (fo != null) {
+                if (fo.isData()) {
+                    fo = FileUtil.getArchiveRoot(fo);
+                }
+                FileObject root = JavadocAndSourceRootDetection.findJavadocRoot(fo);
+                if (root == null) {
+                    DialogDisplayer.getDefault().notify(new NotifyDescriptor.Message(
+                        NbBundle.getMessage(J2SEVolumeCustomizer.class,"TXT_InvalidJavadocRoot", f.getPath()), //NOI18N
+                        NotifyDescriptor.ERROR_MESSAGE));
+                    return null;
+                } else {
+                    return FileUtil.getRelativePath(fo, root)+"/"; // NOI18N
+                }
+            }
+        } else if (volume.equals(J2SELibraryTypeProvider.VOLUME_TYPE_SRC)) {
+            if (fo != null) {
+                if (fo.isData()) {
+                    fo = FileUtil.getArchiveRoot(fo);
+                }
+                FileObject root = JavadocAndSourceRootDetection.findSourceRoot(fo);
+                if (root == null) {
+                    // TODO: warn user that no source root was found
+                    return null;
+                }
+                if (FileUtil.isParentOf(root,fo)) {
+                    // TODO: warn user that selected folder is under source root
+                    return null;
+                }
+                else {
+                    assert fo.equals(root) || FileUtil.isParentOf(fo, root) : fo.toString()+" is not parent of "+root; // NOI18N
+                    return FileUtil.getRelativePath(fo, root)+"/"; // NOI18N
+                }
+            }
+        }
+        return null;
+    }
+
     public void setObject(Object bean) {
         assert bean instanceof LibraryCustomizerContext : bean.getClass();
         LibraryCustomizerContext context = (LibraryCustomizerContext)bean;
@@ -474,20 +534,20 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
         if (model.getSize()>0) {
             content.setSelectedIndex(0);
         }
-    }        
-    
-    
-    private static class SimpleFileFilter extends FileFilter {
-        
+    }
+
+
+    private static class ArchiveFileFilter extends FileFilter {
+
         private String description;
         private Collection extensions;
-        
-        
-        public SimpleFileFilter(String description, String[] extensions) {
+
+
+        public ArchiveFileFilter(String description, String[] extensions) {
             this.description = description;
             this.extensions = Arrays.asList(extensions);
         }
-        
+
         public boolean accept(File f) {
             if (f.isDirectory())
                 return true;
@@ -496,18 +556,26 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
             if (index <= 0 || index==name.length()-1)
                 return false;
             String extension = name.substring(index+1).toUpperCase();
-            return this.extensions.contains(extension);
+            if (!this.extensions.contains(extension)) {
+                return false;
+            }
+            try {
+                return FileUtil.isArchiveFile (f.toURI().toURL());
+            } catch (MalformedURLException e) {
+                Exceptions.printStackTrace(e);
+                return false;
+            }
         }
-        
+
         public String getDescription() {
             return this.description;
         }
     }
-    
-    
+
+
     private static File lastFolder = null;
-    
-    
+
+
     // Variables declaration - do not modify//GEN-BEGIN:variables
     private javax.swing.JButton addButton;
     private javax.swing.JList content;
@@ -518,14 +586,14 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
     private javax.swing.JButton upButton;
     // End of variables declaration//GEN-END:variables
     private JButton addURLButton;
-    
+
     private static class ContentRenderer extends DefaultListCellRenderer {
 
         public Component getListCellRendererComponent(JList list, Object value, int index, boolean isSelected, boolean cellHasFocus) {
             String displayName = null;
             Color color = null;
             String toolTip = null;
-            
+
             URI uri = null;
             if (value instanceof URI) {
                 uri = (URI)value;
@@ -567,7 +635,7 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
                 }
                 if (broken) {
                     color = new Color (164,0,0);
-                    toolTip = NbBundle.getMessage (J2SEVolumeCustomizer.class,"TXT_BrokenFile");                    
+                    toolTip = NbBundle.getMessage (J2SEVolumeCustomizer.class,"TXT_BrokenFile");
                 }
             }
             Component c = super.getListCellRendererComponent(list, displayName, index, isSelected, cellHasFocus);
